Fix position of navbar when not overflowing so it doesn't move when window resize so it doesn't fit it all.

--- a/scss/partials/_navigation_sidebar.scss
+++ b/scss/partials/_navigation_sidebar.scss
@@ -235,13 +235,13 @@
 div.left-navigation-sidebar {
   position: absolute;
   position: fixed;
-  max-height: calc(100vh - 96px);
+  max-height: calc(100vh - 90px);
   overflow-y: auto;
   overflow-x: visible;
   padding-bottom: 20px;
   width: #{$left_navigation_sidebar_width}px;
-  top: 96px;
-  height: calc(100vh - 80px);
+  top: 90px;
+  height: calc(100vh - 90px);
   @include no-user-select();
 
   @include mobile() {
@@ -258,6 +258,7 @@ div.left-navigation-sidebar {
     height: unset;
     overflow-y: unset;
     overflow-x: unset;
+    padding-bottom: 0;
 
     &.show-mobile-boards-menu {
       display: block;
